welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:2: error: ')' expected but integer literal found.
  if ((a<=19 & a>=13) || (b<=19 & >=13)) {
                                    ^teenSum:5: error: ')' expected but '}' found.
} 
^